2009-03-21  Ben Abbott <bpabbott@mac.com>

	* plot/print.m: Restore the behavior for option -S<num>,<num>.

2009-03-19  Jaroslav Hajek <highegg@gmail.com>

	* optimization/fsolve.m (guarded_eval): Simplify & fix missing
	semicolon.

2009-03-17  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/__fdjac__.m: Pass in fvec to save one evaluation.
	* optimization/fsolve.m: Avoid redundant reevaluation when using
	FD jacobians. Document how it can be done with user jacobians.  Make
	first iteration special and call outputfcn after it. Skip updates
	unless two successful iterations have occured.
	* optimization/__dogleg__.m: Add missing alpha in the zero-gradient
	case.
	* optimization/fsolve.m: Remove autodg (not used), simplify.

2009-03-14  Jaroslav Hajek  <highegg@gmail.com>

	* statistics/base/var.m: a -> x.

2009-03-13  Jaroslav Hajek  <highegg@gmail.com>

	* statistics/base/mean.m: Simplify.
	* statistics/base/meansq.m: Optimize.
	* statistics/base/center.m: Fix behvaior with vectors, simplify.
	* statistics/base/std.m: Simplify using `center'.
	* statistics/base/var.m: Ditto.
	* statistics/base/cov.m: Ditto.

2009-03-13  Jaroslav Hajek  <highegg@gmail.com>

	* general/repmat.m: Use subscript pairs rather than forming Kronecker
	products.

2009-03-11  Ben Abbott  <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Unset the {x,y,z}ticks when initializing
	each axis. Set ticklabels when the ticklabels are empty and when
	ticklabelmode=="manual".

2009-03-11  Marco Caliari  <marco.caliari@univr.it>

	* plot/axis.m: Implement "square" and "equal" options, conditional
	on how octave positions gnuplot axes. Place the "title()" and
	"axis()" commands after "plot()" in the demos.

2009-03-09  Ben Abbott  <bpabbott@mac.com>

	* plot/__go_draw_axes__.m (do_tics): Fix typo (xaxislocation ->
	yaxislocation).

2009-03-09  John W. Eaton  <jwe@octave.org>

	* help/lookfor.m (search_cache): Also match function names.

	* pkg/pkg.m, help/gen_doc_cache.m, help/lookfor.m: